--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -13,21 +13,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Trivy (latest release)
+      - name: Install Trivy (latest)
         run: |
-          TRIVY_VERSION=$(curl -s https://api.github.com/repos/aquasecurity/trivy/releases/latest | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-          curl -sfL https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz -o trivy.tar.gz
+          VERSION=$(curl -s https://api.github.com/repos/aquasecurity/trivy/releases/latest | grep tag_name | cut -d '"' -f4)
+          curl -sfL -o trivy.tar.gz https://github.com/aquasecurity/trivy/releases/download/${VERSION}/trivy_${VERSION#v}_Linux-64bit.tar.gz
           tar -xzf trivy.tar.gz
           sudo mv trivy /usr/local/bin/
           trivy --version
 
-      - name: Generate SBOM and vulnerability reports
-        run: |
-          trivy fs --format cyclonedx --output sbom.json .
-          trivy fs --format table --output trivy_report.txt .
-          trivy fs --format html  --output trivy_report.html .
+      - name: Generate SBOM (CycloneDX)
+        run: trivy fs --scanners vuln --format cyclonedx --output sbom.json .
 
-      - name: Upload reports as artifacts
+      - name: Generate text report
+        run: trivy fs --format table --output trivy_report.txt .
+
+      - name: Generate HTML report
+        run: |
+          curl -sSL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/html.tpl -o html.tpl
+          trivy fs --format template --template "@html.tpl" -o trivy_report.html .
+
+      - name: Upload reports
         uses: actions/upload-artifact@v4
         with:
           name: trivy-scan-report
