--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y npm
-          npm ci --ignore-scripts
+          npm install --ignore-scripts
 
       - name: Install Trivy
         run: |
@@ -27,14 +27,14 @@ jobs:
           sudo mv trivy /usr/local/bin/
           trivy --version
 
-      - name: Scan project and generate reports
+      - name: Run Trivy and generate reports
         run: |
           curl -sSL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/html.tpl -o html.tpl
           trivy fs --format cyclonedx --scanners vuln --output sbom.json .
           trivy fs --format table --output trivy_report.txt .
           trivy fs --format template --template "@html.tpl" --output trivy_report.html .
 
-      - name: Upload reports as artifacts
+      - name: Upload reports
         uses: actions/upload-artifact@v4
         with:
           name: trivy-scan-report
